[package]
name = "p2p"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
prost-build = "0.9.0"


[dependencies]
byteorder = "1.4.3"
bytes = "1.1.0"
clap = "2.33.3"
memmap = "0.7.0"
prost = "0.9.0"
rand = "0.8.4"
serde_json = "1.0.68"
threadpool = "1.8.1"
